# decision-ledger

./: .env.local.example  .gitignore  README.md  RUN_LOCALLY.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
.claude/: settings.json
app/: globals.css  layout.tsx  page.tsx
app/ledger/: page.tsx
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  queue.py  schemas.py  workers.py
backend/app/agents/: detector.py  extractor.py  narrator.py  resolver.py
backend/app/routes/: admin.py  ingest.py
backend/scripts/: check_db.py  label_remaining_clusters.py  run_detector_once.py  run_extractor_once.py  run_narrator_once.py  run_resolver_once.py  seed_from_fixtures.py  tune_threshold.py
backend/tests/: test_detector_rules.py  test_extractor.py  test_resolver.py
components/: navbar.tsx
components/providers/: theme-provider.tsx
components/ui/: badge.tsx  progress.tsx  sheet.tsx  tabs.tsx  tooltip.tsx
db/migrations/: 001_initial.sql  002_align_with_build_plan.sql
demo_data/adr/: adr-0042-primary-datastore-postgres.md  adr-0043-event-schema-versioning.md  adr-0047-identity-graph-ttl.md
demo_data/meeting/: identity_squad_weekly_2026-04-02.txt  incident_retro_2026-07-20.txt  q1_arch_review_2026-03-15.txt  q2_planning_2026-06-01.txt
demo_data/pr/: pr_1023_hotfix_auth_bug.json  pr_847_user_events_mongodb_migration.json
demo_data/slack/: backend_guild_2026-04-08.md  (+3 more)
lib/: backend-adapter.ts  browser-storage.ts  demo-data.ts  supabase.ts  types.ts  utils.ts
scripts/: start-frontend.sh
(+21 files in other folders)
